--- a/FinalProject.html
+++ b/FinalProject.html
@@ -22,10 +22,18 @@
     </thead>
     </table>
   <h1>  Welcome to Derrien's Final Project webpage! </h1>
-  <p>   This page contains a Javascript app I made with my partner Neil Macleod in my CSC 106 course at the University of Rhode Island. Our final project we decided on was to build a Sudoku application and what you see below is what it evolved into. We used every aspect of programming we learned over the semester to create this game with 3 different difficulties to try.
+  <p>   This page contains a Javascript app I made with my partner Neil Macleod in my CSC 106 course at the University of Rhode Island. Our final project we decided on was to build 
+    a Sudoku application and what you see below is what it evolved into. We used every aspect of programming we learned over the semester to create this game with 3 different 
+    difficulties to try.
   </p>
       <h1> How to use the app: </h1>
-      <p>
+      <p> Simply click on the difficulty you would like to try to start one of our 3 puzzles. If you would like a reminder of how to play Sudoku please use the “How to Play” button. 
+        When you enter the game, you will see 1-9 buttons at the bottom of the game screen click on the number you would like to place in each block to select it and then click on the
+        block you would like to input the selected number. You will notice that the selected number will be highlighted in orange. You do not need to reselect a number if you wish to
+        use it for multiple blocks as it will stay selected until changed. We have included a “Check Answers” button which can be used at any time. If you choose the easy puzzle the 
+        logics for the check button are always active and the block will turn green when you enter the correct number. NOTE: If you play on intermediate or hard once the check answer 
+        button is clicked the blocks will remain the color they appeared when the button was last pressed. You can however click the “Check Answer” button again to have the program 
+        recheck your entries.
       </p>
       <table>
         <tr>
