--- a/FinalProject.html
+++ b/FinalProject.html
@@ -38,7 +38,7 @@
       <table>
         <tr>
       <td><h2><a href="https://www.khanacademy.org/computer-programming/macleod_walters_sudoku/5426285888094208">MacLeod_Walters_Sudoku</a></h2><script src="https://www.khanacademy.org/computer-programming/macleod_walters_sudoku/5426285888094208/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-    <td><iframe scrolling='no' frameborder='0' style='width: 300px; height: 400px; border:0;' src='https://uri.techsmithrelay.com/connector/embed/index/EYz4' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></td>
+          <td><h2><a>How to play video</a></h2><iframe scrolling='no' frameborder='0' style='width: 500px; height: 400px; border:0;' src='https://uri.techsmithrelay.com/connector/embed/index/EYz4' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></td>
         </tr>
       </table>
         </div>
